@@ -28,13 +28,13 @@ void *POSIX_Init(
   if ( status )
     fprintf( stderr, "Server - lock did not work (%d)\n", status );
 
-  for ( ; ; ) {
+  for (count=0; ; count++) {
 
     status = pthread_cond_wait( &Condition, &Mutex );
     if ( status )
       fprintf( stderr, "Server - condition wait did not work (%d)\n", status );
 
-    if ((++count % 2) == 0)
+    if ((count % 2) == 0)
       LED_OFF();
     else
       LED_ON();
